meeting Leslie